# MSSD02_OpenFOAM

./: .gitignore  README.md  curiosityFluidsAirfoilMesher.py  exercise02.ipynb  pyproject.toml
openfoam_naca/0/: U  nuTilda  nut  p
openfoam_naca/0.05/: U  nuTilda  nut  p  phi
openfoam_naca/0.05/uniform/: time
openfoam_naca/0.1/: U  nuTilda  nut  p  phi
openfoam_naca/0.1/uniform/: time
openfoam_naca/0.15/: U  nuTilda  nut  p  phi
openfoam_naca/0.15/uniform/: time
openfoam_naca/0.2/: U  nuTilda  nut  p  phi
openfoam_naca/0.2/uniform/: time
openfoam_naca/0.25/: U  nuTilda  nut  p  phi
openfoam_naca/0.25/uniform/: time
openfoam_naca/0.3/: U  nuTilda  nut  p  phi
openfoam_naca/0.3/uniform/: time
openfoam_naca/0.35/: U  nuTilda  nut  p  phi
openfoam_naca/0.35/uniform/: time
openfoam_naca/0.4/: U  nuTilda  nut  p  phi
openfoam_naca/0.4/uniform/: time
openfoam_naca/0.45/: U  nuTilda  nut  p  phi
openfoam_naca/0.45/uniform/: time
openfoam_naca/0.5/: U  nuTilda  nut  p  phi
openfoam_naca/0.5/uniform/: time
openfoam_naca/0.55/: U  nuTilda  nut  p  phi
openfoam_naca/0.55/uniform/: time
openfoam_naca/0.6/: U  nuTilda  nut  p  phi
openfoam_naca/constant/: momentumTransport  physicalProperties
openfoam_naca/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
openfoam_naca_study.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
openfoam_project/: __init__.py  airfoil.py  case.py  mesher.py  postprocess.py
scripts/: example_curiosityfluids_setup.py  run_camber_study.py  run_point_convergence.py  run_single_case.py
(+5 files in other folders)
