[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openfoam-naca-study"
version = "0.1.0"
description = "Reproducible OpenFOAM parameter studies for NACA 4-digit airfoils"
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
]

[tool.setuptools]
packages = ["openfoam_project"]
